.omo/evidence/task-10-red-graceful-parse.txt
============================= test session starts ==============================
platform darwin -- Python 3.13.7, pytest-9.0.3, pluggy-1.6.0
rootdir: /Users/robertguss/Projects/startups/code-scent-mcp
configfile: pyproject.toml
plugins: cov-7.1.0, anyio-4.13.0
collected 1 item

tests/unit/test_python_parser.py F                                       [100%]

=================================== FAILURES ===================================
__________ test_malformed_python_file_does_not_abort_repo_extraction ___________

tmp_path = PosixPath('/private/var/folders/f8/ft7ygqg92pj8qh0rwplbw2x80000gn/T/pytest-of-robertguss/pytest-113/test_malformed_python_file_doe0')

    def test_malformed_python_file_does_not_abort_repo_extraction(tmp_path: Path) -> None:
        repo = tmp_path / "repo"
        valid = repo / "src" / "pkg" / "service.py"
        broken = repo / "src" / "pkg" / "broken.py"
        valid.parent.mkdir(parents=True)
        _ = valid.write_text("def ok() -> None:\n    pass\n")
        _ = broken.write_text("def broken(:\n")
    
>       result = SymbolService(repo).extract()
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

tests/unit/test_python_parser.py:74: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
src/codescent/services/symbols.py:25: in extract
    parsed_files = tuple(
src/codescent/services/symbols.py:26: in <genexpr>
    parse_python_file(repo_root / item.path, item.path)
src/codescent/engine/parsers/python.py:117: in parse_python_file
    tree = ast.parse(source_path.read_text(), filename=relative_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

source = 'def broken(:\n', filename = 'src/pkg/broken.py', mode = 'exec'

    def parse(source, filename='<unknown>', mode='exec', *,
              type_comments=False, feature_version=None, optimize=-1):
        """
        Parse the source into an AST node.
        Equivalent to compile(source, filename, mode, PyCF_ONLY_AST).
        Pass type_comments=True to get back type comments where the syntax allows.
        """
        flags = PyCF_ONLY_AST
        if optimize > 0:
            flags |= PyCF_OPTIMIZED_AST
        if type_comments:
            flags |= PyCF_TYPE_COMMENTS
        if feature_version is None:
            feature_version = -1
        elif isinstance(feature_version, tuple):
            major, minor = feature_version  # Should be a 2-tuple.
            if major != 3:
                raise ValueError(f"Unsupported major version: {major}")
            feature_version = minor
        # Else it should be an int giving the minor version for 3.x.
>       return compile(source, filename, mode, flags,
                       _feature_version=feature_version, optimize=optimize)
E         File "src/pkg/broken.py", line 1
E           def broken(:
E                      ^
E       SyntaxError: invalid syntax

../../../.local/share/uv/python/cpython-3.13.7-macos-aarch64-none/lib/python3.13/ast.py:50: SyntaxError
=========================== short test summary info ============================
FAILED tests/unit/test_python_parser.py::test_malformed_python_file_does_not_abort_repo_extraction
============================== 1 failed in 0.07s ===============================
